--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,12 @@
     		<artifactId>commons-lang3</artifactId>
     		<version>3.19.0</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.junit/com.springsource.org.junit -->
+	<dependency>
+    		<groupId>junit</groupId>
+    		<artifactId>junit</artifactId>
+    		<version>4.12</version>
+    		<scope>test</scope>
+	</dependency>
   </dependencies>
   </project>
